--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,21 @@
+
 {
   "name": "AgriNexus World",
   "short_name": "AgriNexus",
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2b6cb0",
+  "theme_color": "#4CAF50",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ]
 }
