--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 
 {
-  "name": "AgriNexus World",
+  "name": "AgriNexus SmartFarm",
   "short_name": "AgriNexus",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
+  "theme_color": "#28a745",
   "icons": [
     {
       "src": "icon-192.png",
