--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,14 @@
 
 {
-  "name": "AgriNexus SmartFarm",
+  "name": "AgriNexus World",
   "short_name": "AgriNexus",
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#28a745",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ]
+  "description": "AgriNexus PWA + Email + GPT Integration",
+  "icons": [{
+    "src": "icon.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
