--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "description": "AgriNexus PWA + Email + GPT Integration",
+  "description": "PWA + Email + GPT + Dashboard",
   "icons": [{
     "src": "icon.png",
     "sizes": "192x192",
