--- a/functions/package.json
+++ b/functions/package.json
@@ -1,11 +1,9 @@
 
 {
-  "name": "agrinexus-functions",
+  "name": "agrinexus-firebase-functions",
   "engines": { "node": "16" },
   "dependencies": {
-    "firebase-admin": "^11.0.0",
     "firebase-functions": "^3.18.0",
-    "nodemailer": "^6.9.1",
-    "axios": "^1.3.4"
+    "firebase-admin": "^11.0.0"
   }
 }
