--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,9 @@
 
 {
-  "name": "agrinexus-firebase-functions",
+  "name": "agrinexus-functions",
   "engines": { "node": "16" },
   "dependencies": {
-    "firebase-functions": "^3.18.0",
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^11.0.0",
+    "firebase-functions": "^3.18.0"
   }
 }
