--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "agrinexus-functions",
+  "name": "agrinexus-feedback-functions",
   "engines": { "node": "16" },
   "dependencies": {
     "firebase-admin": "^11.0.0",
