--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,9 @@
 
 {
-  "name": "agrinexus-crop-alert-function",
+  "name": "agrinexus-gpt-proxy",
   "engines": { "node": "16" },
   "dependencies": {
-    "firebase-admin": "^11.0.0",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "node-fetch": "^2.6.1"
   }
 }
