--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,9 @@
 
 {
-  "name": "agrinexus-gpt-proxy",
+  "name": "agrinexus-gpt-functions",
   "engines": { "node": "16" },
   "dependencies": {
+    "firebase-admin": "^11.0.0",
     "firebase-functions": "^3.18.0",
     "node-fetch": "^2.6.1"
   }
