--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
+
 {
-  "name": "vercel-gpt-proxy",
+  "name": "agrinexus-ui",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0"
+  }
 }
