--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,13 @@
 {
   "name": "AgriNexus World",
   "short_name": "AgriNexus",
-  "start_url": "./index.html",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#111827",
-  "theme_color": "#1f2937",
-  "icons": [
-    {
-      "src": "assets/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#000000",
+  "theme_color": "#0f172a",
+  "icons": [{
+    "src": "/assets/icon-192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
