--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "AgriNexus World",
   "short_name": "AgriNexus",
-  "start_url": "index.html",
+  "start_url": "index-scroll.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#0f172a",
+  "background_color": "#111827",
+  "theme_color": "#10b981",
   "icons": [{
-    "src": "/assets/icon-192.png",
+    "src": "/icon-192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
