--- a/package.json
+++ b/package.json
@@ -1,20 +1,1 @@
-
-{
-  "name": "agrinexus-ui",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.0.0"
-  }
-}
+<!-- Placeholder for package.json -->
